endpoints: retrieve cities
